# EncryptTask

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: classes.h.9308FB0CA750F0D2.idx  io_utils.h.17F64B24A048E36B.idx  main.cpp.5809E12623656277.idx  src_classes.cpp.427E28CA77BC799A.idx  src_utils.cpp.29E20767F62ABFD8.idx  utils.h.D8090F393C0C811A.idx
cpp-version/headers/: classes.h  commands.h  encryption.h
cpp-version/src/: main.cpp  src_classes.cpp  src_utils.cpp
headers/: classes.h  commands.h  functions.h  notef.h  serialization.h  structures.h  utils.h
python-version/src/: __main.py  classes.py  commands.py  encryption.py  note_utils.py  serialization.py
src/: classes_src.cpp  main.cpp  src_classes.cpp  src_commands.cpp  src_encryption.cpp  src_notef.cpp  src_serialization.cpp  src_utils.cpp
src/headers_realization/: src_classes.cpp  src_functions.cpp  src_utils.cpp
